[package]
name = "esp_hal_snippets"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.6.1", features = ["defmt"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
esp-backtrace = { version = "0.14.2", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.22.0", features = ["defmt", "esp32c3"] }
esp-hal-embassy = { version = "0.5", features = ["defmt", "esp32c3"] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false
