[package]
name         = "esp_hal_snippets"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.76.0"

[dependencies]
embassy-executor = { version = "0.6.1", features = ["defmt"] }
embassy-time     = { version = "0.3", features = ["generic-queue-8"] }
esp-hal          = { version = "0.21.1", features = ["defmt", "esp32c3"] }
esp-hal-embassy  = { version = "0.4", features = ["defmt", "esp32c3"] }

defmt = "0.3"
esp-backtrace = { version = "0.14.2", features = [
  "defmt",
  "esp32c3",
  "exception-handler",
  "panic-handler",
] }
rtt-target = { git = "https://github.com/probe-rs/rtt-target", features = [
  "defmt",
] }

[profile.release]
codegen-units    = 1
debug            = 2
debug-assertions = false
incremental      = false
opt-level        = 3
lto              = 'fat'
overflow-checks  = false

[patch.crates-io]
esp-hal         = { git = "https://github.com/esp-rs/esp-hal", rev = "b7224ef4c934f02e2dd229d1ceed024a132784d4" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "b7224ef4c934f02e2dd229d1ceed024a132784d4" }
esp-backtrace   = { git = "https://github.com/esp-rs/esp-hal", rev = "b7224ef4c934f02e2dd229d1ceed024a132784d4" }
