[workspace]
members = [".", "trouble/host", "trouble/examples/apps"]

[package]
name = "esp_hal_snippets"
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"

[[bin]]
name = "ble_test"
path = "src/bin/ble_test.rs"
test = false
doctest = false
bench = false

[dependencies]
bt-hci = { version = "0.1.2", features = ["defmt"] }
defmt = "0.3"
defmt-rtt = "0.4"
embassy-executor = { version = "0.6", features = ["defmt", "task-arena-size-65536"] }
embassy-time = { version = "0.3", features = ["generic-queue-8"] }
esp-alloc = "0.5"
esp-backtrace = { version = "0.14", features = [
  "esp32c3",
  "defmt",
  "exception-handler",
  "panic-handler",
] }
esp-hal = { version = "0.22", features = ["esp32c3", "defmt"] }
esp-hal-embassy = { version = "0.5", features = ["esp32c3", "defmt"] }
esp-wifi = { version = "0.11", features = [
  "defmt",
  "esp32c3",
  "ble",
] }
trouble-example-apps = { path = "./trouble/examples/apps" }



[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
opt-level = 3
lto = 'fat'
overflow-checks = false

[patch.crates-io]
# Latest esp-hal
# esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "d9d771706f1612959a4d8526d28b0e39330aeec0" }
# esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "d9d771706f1612959a4d8526d28b0e39330aeec0" }
# esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "d9d771706f1612959a4d8526d28b0e39330aeec0" }
# esp-wifi = { git = "https://github.com/esp-rs/esp-hal", rev = "d9d771706f1612959a4d8526d28b0e39330aeec0" }
# esp-alloc = { git = "https://github.com/esp-rs/esp-hal", rev = "d9d771706f1612959a4d8526d28b0e39330aeec0" }

# Latest embassy
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "37111a891ca0e55efc6326e518f423e5fc677839" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "37111a891ca0e55efc6326e518f423e5fc677839" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "37111a891ca0e55efc6326e518f423e5fc677839" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", rev = "37111a891ca0e55efc6326e518f423e5fc677839" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy.git", rev = "37111a891ca0e55efc6326e518f423e5fc677839" }
